kubernetes/applications/manifests/alertmanager/alertmanager-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: alertmanager
  labels:
    app: alertmanager
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        fsGroup: 65534
      containers:
        - name: alertmanager
          image: prom/alertmanager:v0.32.0
          imagePullPolicy: IfNotPresent
          args:
            - --config.file=/etc/alertmanager/alertmanager.yml
            - --storage.path=/data
          ports:
            - name: web
              containerPort: 9093
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: config-volume
              mountPath: /etc/alertmanager
            - name: data
              mountPath: /data
      volumes:
        - name: config-volume
          configMap:
            name: alertmanager-config
        - name: data
          persistentVolumeClaim:
            claimName: alertmanager-data-pvc
